# Tom

./: .bumpversion.toml  .dockerignore  .gitignore  ART_LICENSE.txt  LICENSE  README.md  ROADMAP.md  SECURITY.md  credload.py  docker-compose.yml  local.env.example  pyproject.toml  pytest.ini  tom_config.jwt.example.yaml  tom_controller_config.example.yaml  tom_controller_config.yaml  tom_core_config.example.yaml  tom_core_config.yaml  tom_worker_config.example.yaml  versions.json
.github/workflows/: build-and-push-containers.yml  deploy-docs.yml
.opencode/plans/: enqueue-error-handling.md
0.15/: 404.html  index.html  sitemap.xml
0.15/adhoc/: index.html
0.15/real/: index.html
0.16/: 404.html  index.html  sitemap.xml
0.16/adhoc/: index.html
0.16/real/: index.html
0.17/: 404.html  index.html  sitemap.xml
0.17/adhoc/: index.html
0.17/real/: index.html
0.18/: 404.html  index.html  sitemap.xml
0.18/adhoc/: index.html
0.18/real/: index.html
0.19/: 404.html  index.html  sitemap.xml
0.19/adhoc/: index.html
0.19/real/: index.html
0.20/: 404.html  index.html  sitemap.xml
0.20/adhoc/: index.html
0.20/real/: index.html
0.21/: 404.html  index.html  sitemap.xml
0.21/adhoc/: index.html
0.21/real/: index.html
0.22/: 404.html  index.html  sitemap.xml
0.22/adhoc/: index.html
0.22/real/: index.html
1.0/: 404.html  index.html  sitemap.xml
1.0/adhoc/: index.html
1.0/real/: index.html
1.1/: 404.html  index.html  sitemap.xml
1.1/adhoc/: index.html
1.1/real/: index.html
1.2/: 404.html  index.html  sitemap.xml
1.2/adhoc/: index.html
1.2/real/: index.html
1.3/: 404.html  index.html  sitemap.xml
1.3/adhoc/: index.html
1.3/real/: index.html
1.4/: 404.html  index.html  sitemap.xml
1.4/adhoc/: index.html
1.4/real/: index.html
docker/redis/: Dockerfile
docs/: .gitignore  Dockerfile  api-endpoints.md  authorization-todo.md  entrypoint.sh  jobs-initial.md  jobs-phase2.md  metrics.md  mkdocs-gha.yml  mkdocs-slop.yml  mkdocs.yml  oauth-implementation.md  overal-sequence-detail.md  parsing-design.md  parsing.md  pyproject.toml  simple_api_guide.md
docs/design/: template-management-api.md
docs/docs/: index.md
inventory/: creds.yml.example  inventory.yml.example
monitoring/: alerts.yml  grafana-dashboard-providers.yml  grafana-datasources.yml  prometheus.yml  tom-dashboard.json
quickstart-configs/: .gitignore  README.md  docker-compose.yml  tom_controller_config.yaml
quickstart-configs/inventory/: inventory.yml
sensible-configs/: README.md  docker-compose.yml
sensible-configs/inventory/: creds.yml  inventory.yml
services/controller/: .dockerignore  Dockerfile  pyproject.toml  pyrightconfig.json  test_jwt_auth.py
services/controller/src/tom_controller/: __init__.py  app.py  config.py  exceptions.py  main.py  validate.py
services/controller/src/tom_controller/Plugins/: __init__.py  base.py
services/controller/src/tom_controller/Plugins/inventory/: nautobot.py  netbox.py  solarwinds.py  yaml.py
services/controller/src/tom_controller/api/: __init__.py  api.py  auth.py  cache_api.py  credentials.py  device.py  helpers.py  inventory.py  models.py  monitoring_api.py  oauth_test.py  raw.py  templates.py
services/controller/src/tom_controller/auth/: __init__.py  jwt_validator.py  oidc_discovery.py  providers.py
services/controller/src/tom_controller/cache/: __init__.py
services/controller/src/tom_controller/inventory/: inventory.py  solarwinds.py  yaml.py
services/controller/src/tom_controller/monitoring/: __init__.py  metrics.py
services/controller/src/tom_controller/parsing/: __init__.py  parser.py  textfsm_parser.py  ttp_parser.py
services/controller/src/tom_controller/static/: oauth-test.html
services/controller/tests/: test_cache.py  test_config.py  test_enqueue_job.py  test_nautobot_plugin.py  test_netbox_plugin.py  test_parsing.py  test_plugin_settings.py  test_templates_api.py
services/controller/tests/auth/: conftest.py  test_provider_recordings.py
services/controller/tests/fixtures/recordings/: README.md
services/controller/tests/fixtures/text_outputs/: show_ip_int_brief.txt
services/controller/tests/templates/textfsm/: test_show_ip_int_brief.textfsm
services/controller/tests/templates/ttp/: test_show_ip_int_brief.ttp
services/core/: Dockerfile  pyproject.toml
services/core/src/tom_core/: __init__.py  app.py  config.py  exceptions.py  main.py
services/core/src/tom_core/adapters/: netmiko.py  netmiko_adapter.py  scrapli_adapter.py
services/core/src/tom_core/api/: __init__.py  api.py  models.py
services/core/src/tom_core/credentials/: credentials.py
services/core/src/tom_core/inventory/: inventory.py  solarwinds.py
services/core/tests/: test_config.py
services/worker/: Dockerfile  pyproject.toml
services/worker/src/tom_worker/: __init__.py  config.py  exceptions.py  jobs.py  main.py  monitoring.py  retry_handler.py  semaphore.py  validate.py
services/worker/src/tom_worker/Plugins/: __init__.py  base.py
services/worker/src/tom_worker/Plugins/credentials/: __init__.py  aws_secrets_manager.py  vault.py  yaml.py
services/worker/src/tom_worker/adapters/: __init__.py  main.py  netmiko_adapter.py  scrapli_adapter.py
services/worker/src/tom_worker/credentials/: __init__.py  credentials.py  vault.py
shared/: README.md  pyproject.toml
shared/models/: __init__.py  models.py
shared/tom_shared/: config.py  exceptions.py
shared/tom_shared/cache/: __init__.py  cache.py
shared/tom_shared/models/: __init__.py  models.py
shared/tom_shared/validation/: __init__.py  core.py
templates/: README.md
tests/: README.md  conftest.py  test_jwt_validation.py
tutorial-configs/: .gitignore  README.md  credload.py  docker-compose.yml  seed_netbox.py  tom_controller_config.yaml
(+363 files in other folders)
