[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tom-shared"
version = "0.2.0"
description = "Tom Smykowski Network Automation Broker - Shared"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "redis>=5.0.0,<6.0.0",
]

