[project]
name = "tom-controller"
version = "0.5.0"
description = "Tom Smykowski Network Automation Broker - Controller Service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.1",
    "fastapi[standard]>=0.116.1",
    "httpx>=0.28.1",
    "orionsdk>=0.4.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-jose>=3.5.0",
    "saq[redis,web]>=0.25.2",
    "textfsm>=1.1.3",
    "tom-shared",
    "uvicorn>=0.33.0",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.uv.sources]
tom-shared = { path = "../../shared", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
#addopts =
