[project]
name = "tom-controller"
version = "0.6.0"
description = "Tom Smykowski Network Automation Broker - Controller Service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.1",
    "fastapi[standard]>=0.116.1",
    "httpx>=0.28.1",
    "ntc-templates>=8.1.0",
    "orionsdk>=0.4.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-jose>=3.5.0",
    "saq[redis,web]>=0.25.2",
    "textfsm>=1.1.3",
    "tom-shared",
    "ttp>=0.9.5",
    "uvicorn>=0.33.0",
]

[dependency-groups]
dev = [
    "freezegun>=1.5.5",
    "pytest",
    "pytest-asyncio>=1.2.0",
    "pytest-recording>=0.13.4",
    "pyyaml>=6.0.2",
    "ruff",
    "vcrpy>=7.0.0",
]

[tool.uv.sources]
tom-shared = { path = "../../shared", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
