[project]
name = "tom-core"
version = "0.1.0"
description = "Tom Smykowski Network Automation Broker - Core Service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncssh>=2.21.0",
    "fastapi[standard]>=0.116.1",
    "netmiko>=4.4.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "saq>=0.25.2",
    "scrapli>=2024.7.30.post1",
    "textfsm>=1.1.3",
    "uvicorn>=0.33.0",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff", 
]
