[project]
name = "tom-core"
version = "0.1.0"
description = "Tom Smykowski Network Automation Broker - Core Service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "saq[redis]>=0.25.2",
    "textfsm>=1.1.3",
    "uvicorn>=0.33.0",
    "tom-shared",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff", 
]

[tool.uv.sources]
tom-shared = { path = "../../shared", editable = true }
