[project]
name = "tom-worker"
version = "0.9.0"
description = "Tom Smykowski Device Worker Node"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncssh>=2.21.0",
    "httpx>=0.28.1",
    "netmiko>=4.6.0",
    "pydantic-settings>=2.10.1",
    "pyyaml>=6.0.2",
    "saq[redis]>=0.25.2",
    "scrapli>=2025.1.30",
    "tom-shared",
]

[tool.uv.sources]
tom-shared = { path = "../../shared", editable = true }

[dependency-groups]
dev = [
    "pyright>=1.1.406",
]
