[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tom-worker"
version = "1.1.0"
description = "Tom Smykowski Device Worker Node"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncssh>=2.21.0",
    "httpx>=0.28.1",
    "netmiko>=4.6.0",
    "pydantic-settings>=2.10.1",
    "pyyaml>=6.0.2",
    "saq[redis]>=0.25.2",
    "scrapli>=2025.1.30",
    "tom-shared",
]

[project.scripts]
tom-worker-validate = "tom_worker.validate:main"

[project.optional-dependencies]
aws = [
    "boto3>=1.42.19",
]

[tool.uv.sources]
tom-shared = { path = "../../shared", editable = true }

[dependency-groups]
dev = [
    "pyright>=1.1.406",
]
